syntax = "proto3";

option go_package = "./;pb";

package pb;

import "google/protobuf/timestamp.proto";


message ProposalResponse {
  int32                     Version     = 1;
  google.protobuf.Timestamp Timestamp   = 2;
  Response                  Response    = 3;
  bytes                     Payload     = 4;
  Endorsement               Endorsement = 5;
}

message Response {
  int32  Status  = 1;
  string Message = 2;
  bytes  Payload = 3;
}

message ProposalResponsePayload {
  bytes ProposalHash = 1;
  bytes Extension    = 2;
}

// 背书有背书者和背书者的签名组成
message Endorsement {
  bytes Endorser  = 1;
  bytes Signature = 2;
}

